--- a/.github/workflows/deploy-datasette-branch-preview.yml
+++ b/.github/workflows/deploy-datasette-branch-preview.yml
@@ -9,7 +9,7 @@ on:
         type: string
 
 jobs:
-  shot-scraper:
+  deploy-branch-preview:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -17,7 +17,6 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.11"
-        cache: "pip"
     - name: Install dependencies
       run: |
         pip install datasette-publish-vercel
